Bug 86422 - [SNB+]igt/kms_pwrite_crc sporadically fails
Summary: [SNB+]igt/kms_pwrite_crc sporadically fails
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: XOrg git
Hardware: Other All
: medium normal
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-11-18 05:50 UTC by Guo Jinxian
Modified: 2017-07-24 22:50 UTC (History)
3 users (show)

See Also:
i915 platform: BDW, BSW/CHT, BYT, HSW, IVB, SKL, SNB
i915 features: GEM/Other


Attachments
dmesg (124.83 KB, text/plain)
2014-11-18 05:50 UTC, Guo Jinxian
no flags Details

Description Guo Jinxian 2014-11-18 05:50:54 UTC
Created attachment 109653 [details]
dmesg

--------------------------
Regression: No,
It's a new case

Non-working platforms: BDW

==kernel==
--------------------------
origin/drm-intel-nightly: 2728bc8199164de1a27586f8c94e37d03120f8cd(fails)
    drm-intel-nightly: 2014y-11m-17d-20h-21m-51s UTC integration manifest
origin/drm-intel-next-queued: 6ac0483b35bfc7546398d1198b65ed7be17f3cc5(fails)
    drm/i915: Propagate invalid setcrtc cloning errors back to userspace
origin/drm-intel-fixes: 0485c9dc24ec0939b42ca5104c0373297506b555(fails)
    drm/i915: Kick fbdev before vgacon

==Bug detailed description==
igt/kms_pwrite_crc fails

Output:
[root@x-hnr9 tests]# ./kms_pwrite_crc
IGT-Version: 1.8-gb35b150 (x86_64) (Linux: 3.18.0-rc5_drm-intel-nightly_2728bc_20141118+ x86_64)
Test assertion failure function test, file kms_pwrite_crc.c:103:
Failed assertion: igt_crc_equal(&crc, &data->ref_crc)

==Reproduce steps==
---------------------------- 
1. ./kms_pwrite_crc
Comment 1 Daniel Vetter 2014-11-18 08:39:49 UTC
Ville is working on a patch for this.
Comment 2 lu hua 2014-12-23 03:22:26 UTC
(In reply to Daniel Vetter from comment #1)
> Ville is working on a patch for this.

It still fails. It also impacts IVB.
Comment 3 lu hua 2014-12-30 02:25:22 UTC
It also fails on BSW. Fail rate: 1/3.
root@x-bsw01:/GFX/Test/Intel_gpu_tools/intel-gpu-tools/tests# ./kms_pwrite_crc
IGT-Version: 1.9-geb799b2 (x86_64) (Linux: 3.18.0_drm-intel-nightly_4fa231_20141229+ x86_64)
Test assertion failure function test, file kms_pwrite_crc.c:103:
Failed assertion: igt_crc_equal(&crc, &data->ref_crc)
Comment 4 lu hua 2015-01-20 03:26:25 UTC
It impacts SNB+ platforms
Comment 5 Jani Nikula 2015-02-12 12:32:09 UTC
(In reply to Daniel Vetter from comment #1)
> Ville is working on a patch for this.

Ville, which patch is this?
Comment 6 Ville Syrjala 2015-02-12 14:37:19 UTC
(In reply to Jani Nikula from comment #5)
> (In reply to Daniel Vetter from comment #1)
> > Ville is working on a patch for this.
> 
> Ville, which patch is this?

http://lists.freedesktop.org/archives/intel-gfx/2014-November/055390.html
was the last attempt. Chris didn't like it, and I never found the time to try anything else. The latest idea that came to mind was to utilize Chris's new cache_dirty flag. I think at this point it's better to say that I'm not actually working on it.
Comment 7 Jani Nikula 2015-08-12 07:17:53 UTC
Please try

http://patchwork.freedesktop.org/patch/56830
Comment 8 Ville Syrjala 2016-01-19 18:36:23 UTC
commit ed75a55bb36dec17b9e0f878cea7c8ccb037d8f9
Author: Ville Syrjälä <ville.syrjala@linux.intel.com>
Date:   Tue Aug 11 19:47:10 2015 +0300

    drm/i915: clflush on pin_to_display after pwrite to UC bo in LLC


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.